# MTB

./: .gitignore  Cargo.toml  README.md  RULEBOOK.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.githooks/: pre-commit
data/: obstacles.csv  penalties.csv  technique-cards.csv  trail-cards.csv  trail-hazards.csv  upgrades.csv
descenders-core/: Cargo.toml
descenders-core/benches/: ismcts_bench.rs
descenders-core/src/: cards.rs  choices.rs  determinize.rs  engine.rs  ismcts.rs  lib.rs  rollout.rs  scoring.rs  types.rs
descenders-gui/: Cargo.toml
descenders-gui/src/: app.rs
descenders-gui/src/analysis/: computations.rs  log_loader.rs
descenders-gui/src/tabs/: analysis.rs  game_viewer.rs  mod.rs
descenders-gui/src/widgets/: bar_table.rs
descenders-runner/: Cargo.toml
descenders-runner/src/: main.rs
descenders-wasm/: Cargo.toml
descenders-wasm/src/: lib.rs
scripts/: run-benchmark.ts  run-monte-carlo.ts  sim-worker.ts
scripts/card-gen/: card_data.py  generate_assets.py  render_cards.py  requirements.txt
src/ai/: benchHelper.ts  ismcts.bench.ts  mctsController.ts  mctsWorker.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ActionBar.tsx  GameBoard.tsx  GameLog.tsx  GameShell.tsx  InfoPanel.tsx  ObstacleZone.tsx  PlayArea.tsx  PlayerHand.tsx  TopBar.tsx  TrailPanel.tsx  UpgradeShop.tsx
src/lib/: ai-player.ts  card-images.ts  cards.ts  engine.ts  obstacle-utils.ts  simulation.ts  types.ts  (+2 more)
treadline-core/: Cargo.toml
treadline-gui/: Cargo.toml
treadline-runner/: Cargo.toml
treadline-wasm/: Cargo.toml
(+32 files in other folders)
