[package]
name = "descenders-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
descenders-core = { path = "../descenders-core" }
eframe = "0.33"
egui_extras = { version = "0.33", features = ["default"] }
egui_plot = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
